# src/main/java/com/bank/transaction/domain/model/ProductInfo.java
@@ -1,0 +1,11 @@
+package com.bank.transaction.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+public class ProductInfo {
+    private String number;
+    private String customerId;
+}
